--- a/templates/config.html
+++ b/templates/config.html
@@ -86,6 +86,10 @@
       {{ form.theme }}
     </div>
     <div class="form-group">
+      <label for="font_family">Font:</label>
+      {{ form.font_family }}
+    </div>
+    <div class="form-group">
       <label for="no_underlines">No Underlines:</label>
       {{ form.no_underlines }}
     </div>
